src/cobertura/tests/snapshots/covcon__cobertura__tests__gen__xml_to_json.snap
---
source: src/cobertura/tests/gen.rs
expression: json_content
---
{
  "line_rate": 0.85,
  "branch_rate": 0.75,
  "lines_covered": 85,
  "lines_valid": 100,
  "branches_covered": 15,
  "branches_valid": 20,
  "complexity": 1.5,
  "version": "2.1.1",
  "timestamp": "1702139945",
  "sources": {
    "source": [
      "/path/to/source1",
      "/path/to/source2"
    ]
  },
  "packages": {
    "package": [
      {
        "name": "com.example.mypackage1",
        "line_rate": 0.9,
        "branch_rate": 0.8,
        "complexity": 1.2,
        "classes": {
          "class": [
            {
              "name": "MyClass1",
              "filename": "com/example/mypackage1/MyClass1.java",
              "line_rate": 0.9,
              "branch_rate": 0.8,
              "complexity": 1.1,
              "methods": {
                "method": [
                  {
                    "name": "method1",
                    "signature": "(I)V",
                    "line_rate": 1.0,
                    "branch_rate": 1.0,
                    "complexity": 1.0,
                    "lines": {
                      "line": [
                        {
                          "number": 10,
                          "hits": 10,
                          "branch": false
                        },
                        {
                          "number": 15,
                          "hits": 5,
                          "branch": true,
                          "condition_coverage": "50%",
                          "conditions": {
                            "condition": [
                              {
                                "number": 0,
                                "type": "jump",
                                "coverage": "50%"
                              },
                              {
                                "number": 1,
                                "type": "switch",
                                "coverage": "100%"
                              }
                            ]
                          }
                        }
                      ]
                    }
                  },
                  {
                    "name": "method2",
                    "signature": "(Ljava/lang/String;)V",
                    "line_rate": 0.8,
                    "branch_rate": 0.6,
                    "complexity": 1.2,
                    "lines": {
                      "line": [
                        {
                          "number": 20,
                          "hits": 3,
                          "branch": false
                        },
                        {
                          "number": 25,
                          "hits": 0,
                          "branch": true,
                          "condition_coverage": "0%",
                          "conditions": {
                            "condition": [
                              {
                                "number": 0,
                                "type": "jump",
                                "coverage": "0%"
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              },
              "lines": {
                "line": [
                  {
                    "number": 10,
                    "hits": 10,
                    "branch": false
                  },
                  {
                    "number": 15,
                    "hits": 5,
                    "branch": true,
                    "condition_coverage": "50%",
                    "conditions": {
                      "condition": [
                        {
                          "number": 0,
                          "type": "jump",
                          "coverage": "50%"
                        },
                        {
                          "number": 1,
                          "type": "switch",
                          "coverage": "100%"
                        }
                      ]
                    }
                  }
                ]
              }
            },
            {
              "name": "MyClass2",
              "filename": "com/example/mypackage1/MyClass2.java",
              "line_rate": 0.8,
              "branch_rate": 0.7,
              "complexity": 1.3,
              "methods": {
                "method": [
                  {
                    "name": "method1",
                    "signature": "()V",
                    "line_rate": 1.0,
                    "branch_rate": 0.8,
                    "complexity": 1.1,
                    "lines": {
                      "line": [
                        {
                          "number": 30,
                          "hits": 8,
                          "branch": false
                        },
                        {
                          "number": 35,
                          "hits": 2,
                          "branch": true,
                          "condition_coverage": "66%",
                          "conditions": {
                            "condition": [
                              {
                                "number": 0,
                                "type": "jump",
                                "coverage": "66%"
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              },
              "lines": {
                "line": [
                  {
                    "number": 30,
                    "hits": 8,
                    "branch": false
                  },
                  {
                    "number": 35,
                    "hits": 2,
                    "branch": true,
                    "condition_coverage": "66%",
                    "conditions": {
                      "condition": [
                        {
                          "number": 0,
                          "type": "jump",
                          "coverage": "66%"
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        "name": "com.example.mypackage2",
        "line_rate": 0.85,
        "branch_rate": 0.75,
        "complexity": 1.4,
        "classes": {
          "class": [
            {
              "name": "AnotherClass",
              "filename": "com/example/mypackage2/AnotherClass.java",
              "line_rate": 0.85,
              "branch_rate": 0.75,
              "complexity": 1.4,
              "methods": {
                "method": [
                  {
                    "name": "anotherMethod",
                    "signature": "()I",
                    "line_rate": 1.0,
                    "branch_rate": 1.0,
                    "complexity": 1.0,
                    "lines": {
                      "line": [
                        {
                          "number": 40,
                          "hits": 10,
                          "branch": false
                        },
                        {
                          "number": 45,
                          "hits": 7,
                          "branch": true,
                          "condition_coverage": "75%",
                          "conditions": {
                            "condition": [
                              {
                                "number": 0,
                                "type": "jump",
                                "coverage": "75%"
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              },
              "lines": {
                "line": [
                  {
                    "number": 40,
                    "hits": 10,
                    "branch": false
                  },
                  {
                    "number": 45,
                    "hits": 7,
                    "branch": true,
                    "condition_coverage": "75%",
                    "conditions": {
                      "condition": [
                        {
                          "number": 0,
                          "type": "jump",
                          "coverage": "75%"
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}
